# celeste_rs

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  celeste_rs_gui-c758a2fcf1eae1ba.js  celeste_rs_gui-c758a2fcf1eae1ba_bg.wasm  celeste_rs_gui-cca20ab9ba2cbc11.js  celeste_rs_gui-ec8f937e9b3d7c98.js  flake.nix  index.html  manifest.json  sw.js
.github/workflows/: pages.yaml  rust.yaml
assets/: 0.celeste  2.celeste
cli/: Cargo.toml
cli/src/: main.rs
gui/: CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  index.html
gui/src/: main.rs  main_menu.rs  modal.rs  tabbed.rs
gui/src/editor/: level_sets.rs  metadata.rs  mod.rs  operations.rs  sessions.rs  stats.rs
gui/wix/: main.wxs
lib/: CHANGELOG.md  Cargo.toml  README.md
lib/src/: anyhow_utils.rs  lib.rs  utils.rs
lib/src/maps/: encoder.rs  lookup.rs  mod.rs  parser.rs  reader.rs  var_types.rs  writer.rs
lib/src/maps/elements/: entities.rs  level.rs  mod.rs  style.rs  triggers.rs
lib/src/mods/: dll.rs  maps.rs  meta.rs  mod.rs
lib/src/playbacks/: mod.rs
lib/src/saves/: mod.rs
lib/src/saves/def/: everest.rs  mod.rs  session.rs  util.rs  vanilla.rs
lib/src/saves/def/mods/: auroras_additions.rs  collab_utils2.rs  mod.rs
lib/src/saves/ops/: everest.rs  mod.rs  session.rs  util.rs  vanilla.rs
lib/src/saves/ops/mods/: auroras_additions.rs  collab_utils2.rs  mod.rs
lib/src/utils/: anyhow.rs  binary.rs  mod.rs  num.rs  yaml.rs
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: entity.rs  lib.rs  map_element.rs  trigger.rs  yaml.rs
macros/src/yaml/: enum.rs  mod.rs  struct.rs
save_gui/: Cargo.toml  README.md  index.html
save_gui/assets/: manifest.json  sw.js
save_gui/src/: editor.rs  main.rs  main_menu.rs  tabbed.rs
save_gui/src/editor/: level_sets.rs  mod.rs  operations.rs  sessions.rs  stats.rs
save_gui/wix/: main.wxs
test_bin/: Cargo.toml
test_bin/src/: main.rs
