[workspace]
members = ["lib", "cli", "test_bin", "gui"]
resolver = "2"
package.repository = "https://github.com/maddymakesgames/celeste_rs"
package.authors = ["Maddymakesgames (madelinemakesgames@gmail.com)"]
package.license = "MIT"
package.homepage = "https://github.com/maddymakesgames/celeste_rs"
package.keywords = ["celeste"]
package.categories = ["data-structures"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.11.1"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
