[package]
name = "celeste_rs"
version = "0.5.1"
edition = "2024"
repository = "https://github.com/maddymakesgames/celeste_rs"
authors = ["Maddymakesgames (madelinemakesgames@gmail.com)"]
description = "Library for working with files related to Celeste and it's modding scene."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aliasable = "0.1"
celeste_rs_macros = { version = "0.2", path = "../macros" }
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.37.4", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.4"
saphyr = "0.0.1"
zip = { version = "2.2", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dotnetdll = "0.0.4"
