[package]
name = "celeste_rs_macros"
version = "0.2.0"
edition = "2024"
repository.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "macros for celeste_rs"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
proc-macro-crate = "3"
quote = "1"
