[package]
name = "save_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git" }
celeste_rs = { path = "../lib" }
rfd = "0.14"
tokio = { version = "1", features = ["rt", "sync"] }


# native:
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1"
features = ["rt", "sync", "rt-multi-thread"]

# web:
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
