[package]
name = "save_gui"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/maddymakesgames/celeste_rs"
authors = ["Maddymakesgames (madelinemakesgames@gmail.com)"]

[package.metadata.wix]
upgrade-guid = "9142F3DB-4ECF-4096-BC14-33F18C294E10"
path-guid = "EFD1D9BC-C8D2-4D5D-8C52-8FBE44437BC3"
license = false
eula = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/emilk/egui.git", rev = "3258cd2" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "3258cd2" }
celeste_rs = { path = "../lib" }
rfd = "0.14"
tokio = { version = "1", features = ["rt", "sync"] }


# native:
[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1"
features = ["rt", "sync", "rt-multi-thread"]

# web:
[target.'cfg(target_family = "wasm")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location"] }
