[package]
name = "test_bin"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata.dist]
dist = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
celeste_rs = { path = "../lib" }
serde = "1"
quick-xml = { version = "0.31", features = ["serialize"] }
serde_path_to_error = "0.1.15"
